--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 	flex-direction: column;
 	width: 100%;
 	align-items: center;
-	padding: 20px;
+	margin-top: 20px;
 }
 
 #gameTitle { 
@@ -31,4 +31,34 @@ body {
     line-height: 1.5;
     border: 3px solid;
     border-radius: 3px;
+}
+
+#gameInstructions {
+    border: 2px dashed #3aa1d1; 
+    margin: 15px 0;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.guessWord {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#currentWord {
+    display: flex;
+    justify-content: center;
+    font-size: 2em;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 100%;
+    margin-top: 5px;
+    color: cyan;
+}
+
+#currentWord > * {
+    margin-right: 10px;
 }
