--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,13 @@ body {
 	font-family: "Nunito", sans-serif;
 	color: #fff;
 	width: 100%;
-    text-align: center;
-    background: url("../images/space-background.jpg"), #1d1f20;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat; 
-    background-size: cover;
-    overflow: hidden;
+	text-align: center;
+	background: url("../images/space-background.jpg"), #1d1f20;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	overflow: hidden;
 }
 
 .gameHeader {
@@ -20,59 +20,62 @@ body {
 	margin-top: 20px;
 }
 
-#gameTitle { 
+#gameTitle {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 50%;
-    font-size: 2em;
-    font-weight: bold;
-    padding: 40px 10px;
-    line-height: 1.5;
-    border: 3px solid;
-    border-radius: 3px;
+	font-size: 2em;
+	font-weight: bold;
+	padding: 40px 10px;
+	line-height: 1.5;
+	border: 3px solid;
+	border-radius: 3px;
 }
 
 #gameInstructions {
-    border: 2px dashed #3aa1d1; 
-    margin: 15px 0;
-    padding: 5px;
-    border-radius: 5px;
+	border: 2px dashed #3aa1d1;
+	margin: 15px 0;
+	padding: 5px;
+	border-radius: 5px;
 }
 
-.guessWord, .guessLetters {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+.guessWord,
+.guessLetters {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
 }
 
-#currentWord, .userGuessLetters  {
-    display: flex;
-    justify-content: center;
-    font-size: 2em;
-    font-weight: bold;
-    text-transform: uppercase;
-    width: 100%;
-    margin-top: 5px;
-    color: cyan;
+#currentWord,
+#userGuessLetters {
+	display: flex;
+	justify-content: center;
+	font-size: 2em;
+	font-weight: bold;
+	text-transform: uppercase;
+	width: 100%;
+	margin-top: 5px;
+	color: cyan;
 }
 
-#currentWord > * , .userGuessLetters > * {
-    margin-right: 10px;
+#currentWord > *,
+#userGuessLetters > * {
+	margin-right: 10px;
 }
 
-.userGuessLetters {
-    color: #ff0080;
-    font-size: 1.5em;
+#userGuessLetters {
+	color: #ff0080;
+	font-size: 1.5em;
 }
 
 .userScore {
-    width: 300px;
-    margin: 0 auto;
-    line-height: 2;
-    border: 1px dashed #ff0080;
-    border-radius: 10px;
-    padding: 5px;
+	width: 300px;
+	margin: 0 auto;
+	line-height: 2;
+	border: 1px dashed #ff0080;
+	border-radius: 10px;
+	padding: 5px;
 }
