--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,8 @@ body {
 	color: #fff;
 	width: 100%;
 	text-align: center;
-	background: url("../images/space-background.jpg"), #1d1f20;
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
+	background: url("../images/space-background.jpg"),
+		#1d1f20 no-repeat center center fixed;
 	background-size: cover;
 	overflow: hidden;
 }
