ADD TRANSITION EFFECT TO BACKGROUND IMAGE CHANGE

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
 	overflow: hidden;
 }
 
+.transitionBackground {
+	transition: background 2s ease-out;
+}
+
 .gameHeader {
 	display: flex;
 	flex-direction: column;
