--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
 	box-sizing: border-box;
-	font-family: "Nunito", sans-serif;
+	font-family: "Love Ya Like A Sister", cursive;
 	color: #fff;
 	width: 100%;
 	text-align: center;
@@ -18,9 +18,10 @@ body {
 	width: 425px;
 	height: 600px;
 	margin: 20px auto;
-	border: 3px solid white;
-	border-radius: 10px;
+	border: 3px solid #d8ffff;
+	border-radius: 20px;
 	background-color: rgba(0, 0, 0, 0.7);
+	box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
 }
 
 .gameHeader {
@@ -32,22 +33,25 @@ body {
 }
 
 #gameTitle {
+	font-family: "Bungee Shade", cursive;
+	color: #d1ffff;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	/* width: 50%; */
-	font-size: 2em;
-	font-weight: bold;
-	padding: 40px 10px;
+	font-size: 2.6em;
+	padding: 20px 10px;
 	line-height: 1.5;
-	border: 3px solid;
-	border-radius: 3px;
+	background: linear-gradient(to right, #ff8a00 0%, #00ffff 100%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	
 }
 
 #gameInstructions {
 	border: 2px dashed #3aa1d1;
 	margin: 15px 0;
-	padding: 5px;
+	padding: 8px;
 	border-radius: 5px;
 }
 
